<?xml version="1.0"?>
<package format="2">
  <name>dataset_reader</name>
  <version>0.1.0</version>
  <description>Package for reading datasets (e.g., KITTI)</description>
  <maintainer email="1766423721@qq.com">fy</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>Poco</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
